--- a/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
+++ b/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
@@ -3,20 +3,23 @@
     width: 100%;
     max-width: 100%;
     min-width: 100%;
+    .bx--inline-notification__close-button {
+      visibility: visible;
+    }
   }
 }
 
 .create-container {
   padding-top: 3rem;
   background-color: white;
-  
+
   .title {
     font-size: 150%;
     text-align: center;
     padding-bottom: 3rem;
   }
 
-  .row {  
+  .row {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
@@ -28,33 +31,36 @@
     background-color: white;
     text-align: left;
   }
-  
+
   .help-icon {
     padding-right: 1%;
     width: 4%;
   }
-  
+
   .entry-field {
     background-color: white;
     width: 60%;
   }
-  
+
   .git-access-drop-down-div {
     background-color: white;
     width: 50%;
   }
-  
+
   .secButtonEnabled {
     cursor: pointer;
   }
-  
+
   .secButtonDisabled {
     cursor: unset;
     fill: #dcdcdc;
     pointer-events: none;
   }
-  
-  #pipeline, #namespace, #git, #serviceAccounts {
+
+  #pipeline,
+  #namespace,
+  #git,
+  #serviceAccounts {
     margin: 0;
   }
 
@@ -64,22 +70,22 @@
     align-items: center;
     justify-content: center;
   }
-    
+
   .add-sec-btn {
     @extend %secret-controls-shared;
     fill: green;
-   }
+  }
 
   .del-sec-btn {
     @extend %secret-controls-shared;
     fill: red;
   }
-  
+
   .token {
     align-items: center;
     display: flex;
   }
-  
+
   %token-icon-shared {
     right: 2.25rem;
     position: fixed;
@@ -90,15 +96,15 @@
     @extend %token-icon-shared;
     visibility: visible;
   }
-  
+
   .token-invisible {
     @extend %token-icon-shared;
     visibility: hidden;
   }
-  
+
   %submit-shared {
     font-weight: bold;
-    
+
     padding-left: 15%;
     padding-right: 15%;
   }
@@ -106,38 +112,38 @@
   #cancel {
     @extend %submit-shared;
     float: left;
-    background-color: red; 
+    background-color: red;
   }
-  
+
   #submit {
     @extend %submit-shared;
     float: right;
-    background-color: green; 
+    background-color: green;
   }
-  
+
   #del #add {
     padding: 0;
   }
-  
+
   .bx--text-input__field-wrapper {
     width: 100%;
   }
-  
+
   .bx--modal-content {
     width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
   }
-  
+
   .bx--modal.is-visible {
-    background-color: rgba(255,255,255,0.82);
+    background-color: rgba(255, 255, 255, 0.82);
   }
-  
+
   .bx--modal-container {
     border: 1px solid black;
     background-color: white;
   }
-  
+
   %primary-secondary-shared {
     display: inline;
     text-align: center;
@@ -149,7 +155,7 @@
     @extend %primary-secondary-shared;
     background-color: green;
   }
-  
+
   .bx--btn.bx--btn--secondary {
     @extend %primary-secondary-shared;
     background-color: red;
@@ -163,24 +169,22 @@
     padding-right: 15%;
     color: white;
   }
-  
+
   .modal-row {
     display: flex;
     align-items: center;
     padding: 1%;
   }
-  
+
   .modal-row-help-icon {
     width: 8%;
   }
-  
+
   .modal-row-item-label {
     width: 30%;
   }
-  
+
   .modal-row-entry-field {
     width: 60%;
   }
-
 }
-
