--- a/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
+++ b/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
@@ -14,6 +14,8 @@
     font-size: 150%;
     text-align: center;
     padding-bottom: 3rem;
+    font-weight: bold;
+    margin-bottom: 1.25rem;
   }
 
   .row {  
@@ -21,6 +23,21 @@
     flex-wrap: nowrap;
     align-items: center;
     padding: 1% 0% 1% 15%;
+  }
+
+  #sectionTitle {
+    font-weight: bold;
+    margin-left: 0.5rem;
+    display: block;
+    margin-top: 1.75rem;
+  }
+
+  .sectionDescription {
+    font-style: italic;
+    font-weight: normal;
+    font-size: 80%;
+    margin-top: 0.4rem;
+    margin-bottom: 0.2rem;
   }
 
   .item-label {
@@ -44,16 +61,6 @@
     width: 50%;
   }
   
-  .secButtonEnabled {
-    cursor: pointer;
-  }
-  
-  .secButtonDisabled {
-    cursor: unset;
-    fill: #dcdcdc;
-    pointer-events: none;
-  }
-  
   #pipeline, #namespace, #git, #serviceAccounts {
     margin: 0;
   }
@@ -63,6 +70,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
   }
     
   .add-sec-btn {
