Webhooks table UI fixes

--- a/webhooks-extension/src/components/WebhookDisplayTable/WebhookDisplayTable.scss
+++ b/webhooks-extension/src/components/WebhookDisplayTable/WebhookDisplayTable.scss
@@ -55,6 +55,11 @@
 
   .bx--batch-actions--active {
     justify-content: flex-end;
+    visibility: visible !important;
+  }
+
+  .bx--batch-actions {
+    visibility: hidden;
   }
 
   .bx--data-table-header {
@@ -88,6 +93,7 @@
   .bx--btn--primary {
     color: #ffffff;
     white-space: nowrap;
+    height: 5px;
   }
 
   .bx--data-table--zebra tbody tr:nth-child(odd) td {
