--- a/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
+++ b/webhooks-extension/src/components/WebhookCreate/WebhookCreate.scss
@@ -140,6 +140,8 @@
     width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-bottom: 1.5rem;
+    margin: 0;
   }
 
   .bx--modal-content > * {
